--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -122,6 +122,7 @@
                 android:orientation="horizontal" >
 
                 <TextView
+                    android:id="@+id/tvThayDoiThongTin"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -133,6 +134,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvLichSuGiaoDich"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="2dp"
@@ -145,6 +147,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvThayDoiPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="2dp"
