--- a/res/layout/item_page_home.xml
+++ b/res/layout/item_page_home.xml
@@ -17,16 +17,19 @@
         android:id="@+id/tvTenSanPham"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Mã hợp đồng 00076589"
+        android:text="An tâm hưng thịnh"
+        android:textStyle="bold"
+        android:textAllCaps="true"
         android:textSize="@dimen/textsize13" />
 
     <TextView
         android:id="@+id/tvTongPhiDaDong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:text="6,450,000"
         android:textSize="@dimen/textsize16"
+        android:textColor="@color/red"
         android:textStyle="bold" />
 
     <TextView
@@ -60,7 +63,7 @@
                 android:id="@+id/tvPhiCoBan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:text="1,500,000"
                 android:textColor="@color/red"
                 android:textStyle="bold" />
@@ -69,7 +72,7 @@
                 android:id="@+id/tvNgayDongPhi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:text="Ngày đóng 12/10/2017"
                 android:textColor="@color/gray"
                 android:textSize="@dimen/textsize12"
@@ -94,7 +97,7 @@
                 android:id="@+id/tvNgayGiaHan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:text="12/12/2017"
                 android:textColor="@color/red"
                 android:textStyle="bold" />
@@ -103,7 +106,7 @@
                 android:id="@+id/tvNgayConLai"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:text="còn 10 ngày"
                 android:textColor="@color/gray"
                 android:textSize="@dimen/textsize12"
