--- a/res/menu/activity_main_drawer.xml
+++ b/res/menu/activity_main_drawer.xml
@@ -60,7 +60,7 @@
             android:title="@string/nav_logout" />
     </group>
 
-    <item android:title="Other">
+    <item android:title="Khác">
         <menu>
             <item
                 android:id="@+id/nav_about_us"
