--- a/res/layout/item_transaction_detail.xml
+++ b/res/layout/item_transaction_detail.xml
@@ -2,7 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:padding="5dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:id="@+id/lloParent"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
 
@@ -45,15 +48,13 @@
                 android:id="@+id/tvLoaiGD"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.4"
+                android:layout_weight="1"
                 android:text="Phí bảo hiểm định kỳ" />
 
             <TextView
                 android:id="@+id/tvTinhTrang"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.6"
-                android:gravity="right"
                 android:text="Hoàn tất"
                 android:textSize="@dimen/textsize14"
                 android:textStyle="bold" />
