--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -2,16 +2,17 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app1="http://schemas.android.com/apk/res/com.dlvn.mcustomerportal"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start" xmlns:app1="http://schemas.android.com/apk/res/com.dlvn.mcustomerportal">
+    tools:openDrawer="start" >
 
     <include
-        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        layout="@layout/app_bar_main" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
