--- a/res/layout/item_transaction.xml
+++ b/res/layout/item_transaction.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lloParent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:gravity="center_vertical"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:paddingBottom="5dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="5dp" >
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:background="@drawable/st_bg_white_border_noradius"
-        android:padding="3dp"
+        android:padding="5dp"
         android:src="@drawable/ico_transaction" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="10dp"
         android:layout_weight="1"
         android:orientation="vertical"
         android:padding="5dp" >
@@ -31,7 +35,7 @@
                 android:id="@+id/tvMaGiaoDich"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="0.4"
                 android:text="Mã giao dịch 245876"
                 android:textColor="@color/red" />
 
@@ -39,7 +43,7 @@
                 android:id="@+id/tvSoTien"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="0.6"
                 android:gravity="right"
                 android:text="14,973,000"
                 android:textSize="@dimen/textsize15" />
